--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,8 @@ GitHub.sublime-settings
 !.vscode/launch.json 
 !.vscode/extensions.json 
 .history
+
+tiv_tam*
+JONGEL*
+*None.html*
+shopping/shopping_list/utils/emails/tiv_tam*
